Quality of life fixed database, reduced dependency, more atomically structured code and fixed libgen integration