@@ -7,6 +7,8 @@ import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
@@ -14,10 +16,9 @@ import java.util.stream.Collectors;
 
 @Service
 public class LibGenApiService {
-    private static final Duration REQUEST_TIMEOUT = Duration.ofSeconds(10);
+    private static final Duration REQUEST_TIMEOUT = Duration.ofSeconds(5);
 
     private final WebClient libGenApiClient;
-
     @Autowired
     public LibGenApiService(WebClient libGenApiClient) {
         this.libGenApiClient = libGenApiClient;
@@ -31,7 +32,19 @@ public class LibGenApiService {
      * @return
      */
     public List<BookInformation> fetchPossibleBookInfo(String query, int limit) throws NoQueryResultsException {
-        return getBooksInfoFromLibGenBookId(getMd5s(query, limit).stream().map(this::getLibGenBookId).collect(Collectors.toList()));
+        return getBooksInfoFromLibGenBookId(getMd5s(urlEncode(query), limit).stream().map(this::getLibGenBookId).collect(Collectors.toList()));
+    }
+
+
+    /**
+     * Compatibility layer for libgen query system
+     *
+     * @param query
+     * @return
+     */
+    public String urlEncode(String query) {
+        System.out.println(URLEncoder.encode(query, StandardCharsets.UTF_8));
+        return URLEncoder.encode(query, StandardCharsets.UTF_8);
     }
 
     /**
@@ -40,13 +53,16 @@ public class LibGenApiService {
      * @param query Query to find books
      * @return A list of MD5 values
      */
-    private List<String> getMd5s(String query, int limit) throws NoQueryResultsException {
+    public List<String> getMd5s(String query, int limit) throws NoQueryResultsException {
+        System.out.println("Inside md5 method: " + query);
+        String uri = "/search.php?req=" + query + "&open=0&res=25&view=simple&phrase=1&column=def";
         //Get html
         List<String> stringList = libGenApiClient.get()
-                .uri("/search.php?req=" + query)
+                .uri(uri)
                 .accept(MediaType.TEXT_HTML)
                 .retrieve()
                 .bodyToFlux(String.class).collectList().block(REQUEST_TIMEOUT);
+        System.out.println("[HTMLBEGIN]" + stringList + "[HTMLEND]");
         //Get md5s
         List<String> filteredMd5s = new ArrayList<>();
         stringList.stream().filter(string -> string.contains("?md5=")).forEach(string -> {
@@ -55,11 +71,11 @@ public class LibGenApiService {
                 filteredMd5s.add(newString);
         });
         //Remove dupes
-        List<String> cleanMd5s = filteredMd5s.stream().distinct().collect(Collectors.toList());
+        List<String> cleanMd5s = filteredMd5s.stream().distinct().toList();
         //Limit
-        List<String> stringerList = cleanMd5s.stream().limit(5).toList();
+        List<String> stringerList = cleanMd5s.stream().limit(limit).toList();
         if (stringerList.size() == 0)
-            throw new NoQueryResultsException("No query results. Defaulting to file metadata");
+            throw new NoQueryResultsException("No query results");
         return stringerList;
     }
 
@@ -69,7 +85,7 @@ public class LibGenApiService {
      * @param md5
      * @return id
      */
-    private String getLibGenBookId(String md5) {
+    public String getLibGenBookId(String md5) {
         List<String> stringList = libGenApiClient.get()
                 .uri("/book/bibtex.php?md5=" + md5)
                 .accept(MediaType.TEXT_HTML)
@@ -80,7 +96,7 @@ public class LibGenApiService {
         return stringList.stream().filter(string -> string.contains("@book{book:")).toList().get(0).split("book:")[1].split(",")[0]; //Can't possibly throw
     }
 
-    private List<BookInformation> getBooksInfoFromLibGenBookId(List<String> ids) {
+    public List<BookInformation> getBooksInfoFromLibGenBookId(List<String> ids) {
         StringBuilder uri = new StringBuilder("ids=");
         ids.forEach(id -> uri.append(id + ','));
         uri.append("&fields=Title,Author,Publisher,Year,Edition,Series,VolumeInfo");//,Publisher,Year,Edition,Series,VolumeInfo");
